# RFS-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rfs.example.json
docs/: agent-contract.md  agent-profile.md  architecture.md  easy-cli-principles.md  guidance-automation-use-case.md  guidance-contract-note-template.md  guidance-contract-review.md  harbor-concept.md  idea-track.md  installation.md  llm-onboarding.md  mvp-plan.md  mvp-status.md  nestclaw-adapter-boundary.md  next-phase-plan.md  notebooklm-adjacent-workflows.md  product-spec.md  project-charter.md  qa-claw-adapter-boundary.md  qa-report.md  release-checklist.md  research-export-format.md  roadmap.md  session-handoff-2026-03-17.md  smoke-checklist.md  todo.md  tool-provider-contract.md  versioning-policy.md  work-groups.md
src/rfs_cli/: agent_contract.md  config.py  drive.py  guidance.py  indexing.py  llm.py  llm_onboarding.md  main.py  models.py  research.py  services.py
tests/: test_cli.py
tests/fixtures/local/: agent-reference.md
tests/fixtures/obsidian/: meeting-notes.md  project-roadmap.md
tests/fixtures/obsidian/.obsidian/: workspace.json
tests/fixtures/obsidian/ideas/: agent-systems.md
