[project]
name = "rfs-cli"
version = "0.1.0"
description = "Personal knowledge, developer utility, and AI-tool CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "google-auth-oauthlib>=1.2,<2",
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
]

[project.scripts]
rfs = "rfs_cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rfs_cli"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
